<resources>
    <string name="app_name">Notes App</string>
    <string name="new_note">New Note</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="image_url">Image URL</string>
    <string name="with_image">with image</string>
    <string name="save">Save</string>
    <string name="started_title">Hello You!</string>
    <string name="starte_sub_title">
        nice to meet you, come join our community!
        <br><b>Login</b> if you already have an acoount</br>
        <br><b>Register</b> to get started </br>
    </string>
    <string name="btn_login">LOGIN</string>
    <string name="login_title">login to app</string>
    <string name="login_sub_title">
        <font color="#00C9B8"><b>Login</b></font>
        if you already have an account.
    </string>
    <string name="regidterrr_sub_tittle">
        <font color="#00C9B8"><b>Register</b></font>
        to get started with the app.
    </string>
    <string name="login_email">Your email or username</string>
    <string name="login_password">Your Password</string>
    <string name="login_forgotpass">Forgot password?</string>
    <string name="login_havent_account">
        I Don\'t  have an account
        <font color = "#00C9BB"><b>Register</b></font>
    </string>
    <string name="register_sub_title">
        <font color="#00C9B8"><b>Login</b></font>
        to get started with the app.
    </string>
    <string name="register_fullname">Full name</string>
    <string name="registet_email">Your Email</string>
    <string name="register_password">Your password</string>
    <string name="registerr_log">Create an Account</string>

</resources>